# Sound-Project

Audio_Separation/: .Test1.wav.icloud  NMF_test.py  Test1.m4a
Improved_Localization/: peak_detection.py  record.py  spectogram.py  visualize.py
Sound Localization/: explanation.txt  plot_doa.py  sound_localization.py
Sound_Localization/: DOA_1_15.json  DOA_1_30.json  DOA_2_15.json  DOA_2_30.json  DOA_3_15.json  explanation.txt  mic3ID.json  sound_detector_full.py  sound_loc_audio_sync.py  sound_localization.py  sound_localization_track.py
respeaker_curr/: .conda  LICENSE  assign_speaker_pi.py  edit_speaker.py  flask.sh  flask_prep.py  flask_prep_pi.py  flask_prep_pi_dynamoDB.py  get_index.py  mutli_threaded_transcribe_chunk.py  record.py  record.sh  record_DOA.py  record_DOA_ID_chunks.py  record_DOA_ID_chunks_pi.py  record_DOA_chunks.py  run_scripts.sh  transcribe_chunk.py  transcribe_chunk_pi.py  transcribe_chunk_realtime.py  vis.py
respeaker_dev/: .gitignore  README.md  assign_speaker.py  assign_speaker_pi.py  cd  check.py  edit_speaker.py  flask_prep.py  flask_prep_pi.py  flask_prep_pi_dynamoDB.py  mutli_threaded_transcribe_chunk.py  record.sh  record_DOA.py  record_DOA_ID_chunks.py  record_DOA_ID_chunks_pi.py  record_DOA_chunks.py  respeaker_args.py  respeaker_local.py  run_scripts.sh  setup.sh  tmp.py  transcribe.sh  (+3 more)
respeaker_dev/ML/respeaker/: LICENSE  Makefile  README.md  pyproject.toml
respeaker_dev/ML/respeaker/respeaker_ml/: __init__.py  dataset.py  features.py  plots.py
respeaker_dev/ML/respeaker/respeaker_ml/modeling/: predict.py  train.py
(+47 files in other folders)
